--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -1,21 +1,55 @@
 <section id="contact" class="w-full py-12 border-t border-[#ffffff10]">
   <div class="max-w-5xl mx-auto">
-    <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">Let's talk</h2>
+    <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">
+      Hablemos
+      <!-- Let's talk -->
+    </h2>
     <h3 class="text-4xl md:text-5xl font-medium text-[var(--white)] mb-6">
-      Contact
+      Contacto
     </h3>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
       <div class="text-[var(--white-icon)]">
         <p class="mb-4">
-          Have a question or a project in mind? Feel free to reach out.
+          ¿Tienes alguna pregunta o un proyecto en mente? <br />
+          No dudes en contactarme.
+          <!-- Have a question or a project in mind? Feel free to reach out. -->
         </p>
-        <div class="flex items-center gap-2">
-          <span>Location:</span>
-          <span class="text-[var(--white)]">Colombia, Valle del cauca</span>
-        </div>
+        <!-- <div class="flex items-center gap-2">
+          <span>Ubicación:</span>
+          <span class="text-[var(--white)]">Lima, Perú 🇵🇪</span>
+        </div> -->
       </div>
 
-      <div>
+      <div class="text-[var(--white-icon)]">
+        <div class="flex items-center gap-2">
+          <a
+            target="_blank"
+            href="https://maps.app.goo.gl/dGwgUCBEWMnymUSp9"
+            aria-label="Email"
+          >
+            <span>Ubicación:</span>
+            <span class="text-[var(--white)]">Lima, Perú 🇵🇪</span></a
+          >
+        </div>
+        <!-- <div class="flex items-center gap-2">
+          <span>Teléfono:</span>
+          <span class="text-[var(--white)]">+51 966 271 844</span>
+        </div> -->
+        <span>Email:</span>
+        <a
+          target="_blank"
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=miguel.gallardof@icloud.com&su=Hey%20Miguel!"
+          aria-label="Email"
+        >
+          <span class="text-[var(--white)]">miguel.gallardof@icloud.com</span
+          ></a
+        >
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- <div>
         <form
           id="contact-form"
           action="https://formspree.io/f/mnnjznkj"
@@ -25,7 +59,7 @@
           <input
             type="text"
             name="from_name"
-            placeholder="Name"
+            placeholder="Nombre"
             required
             class="px-4 py-2 bg-[#1414149c] text-[var(--white)] border border-[var(--white-icon-tr)] rounded-lg focus:outline-none focus:ring-2 focus:ring-[var(--sec)]"
           />
@@ -38,7 +72,7 @@
           />
           <textarea
             name="message"
-            placeholder="Message"
+            placeholder="Mensaje"
             rows="6"
             required
             class="px-4 py-2 bg-[#1414149c] text-[var(--white)] border border-[var(--white-icon-tr)] rounded-lg focus:outline-none focus:ring-2 focus:ring-[var(--sec)] resize-none"
@@ -54,7 +88,7 @@
           id="form-message"
           class="hidden justify-center items-center mt-4 text-[var(--white)] text-lg"
         >
-          ✅ Thank you for your message!
+          ✅ ¡Gracias por tu mensaje!
         </div>
       </div>
     </div>
@@ -89,4 +123,4 @@
       alert("There was a problem sending your message.");
     }
   });
-</script>
+</script> -->
