--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Contact from "@/components/contact.astro";
 import Footer from "@/components/footer.astro";
 ---
 
-<Layout title="Oscar Hernandez">
+<Layout title="Miguel Gallardo">
   <Nav />
   <Home />
   <Projects />
