--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,7 +6,7 @@ import LikeButton from "../React/LikeButton.tsx";
   <div class="max-w-5xl mx-auto">
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-10">
       <div class="flex flex-col lg:items-start items-center space-y-6 gap-9">
-        <div class="flex space-x-6 sm:space-x-8">
+        <div class="flex space-x-6 sm:space-x-8 py-6">
           {
             [
               {
@@ -39,7 +39,7 @@ import LikeButton from "../React/LikeButton.tsx";
             ))
           }
         </div>
-        <LikeButton client:load />
+        <!-- <LikeButton client:load /> -->
       </div>
 
       <div class="flex flex-col items-center space-y-6">
