--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="bg-[--background] md:px-48 lg:px-20 px-9">
+    <span id="circle"></span>
     <slot />
   </body>
 </html>
@@ -54,8 +55,12 @@ const { title } = Astro.props;
     --white: #dfdfdf;
     --white-icon: #f3f3f398;
     --white-icon-tr: #f3f3f310;
+    --line: #31038b;
+    --container: #141414;
   }
-
+  body {
+    scrollbar-color: var(--line) var(--container);
+  }
   * {
     font-family:
       "montserrat",
@@ -97,4 +102,25 @@ const { title } = Astro.props;
     scrollbar-width: thin;
     scrollbar-color: var(--line) var(--container);
   }
+
+  #circle {
+    position: absolute;
+    border: 1px solid var(--sec);
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    transition: all 0.2s ease-in-out;
+    z-index: 9999;
+    pointer-events: none;
+  }
 </style>
+
+<script>
+  const circle = document.querySelector("#circle") as HTMLSpanElement;
+
+  document.addEventListener("mousemove", (e) => {
+    const mouseX = e.pageX - 105;
+    const mouseY = e.pageY - 30;
+    circle.style = `transform: translate3d(${mouseX}px, ${mouseY}px, 0)`;
+  });
+</script>
