--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="bg-[--background] md:px-48 lg:px-20 px-9">
-    <span id="circle"></span>
+    <div id="circle"></div>
     <slot />
   </body>
 </html>
@@ -109,9 +109,15 @@ const { title } = Astro.props;
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.3s ease-in-out;
     z-index: 9999;
     pointer-events: none;
+  }
+
+  @media only screen and (max-width: 768px) {
+    #circle {
+      display: none;
+    }
   }
 </style>
 
@@ -119,7 +125,7 @@ const { title } = Astro.props;
   const circle = document.querySelector("#circle") as HTMLSpanElement;
 
   document.addEventListener("mousemove", (e) => {
-    const mouseX = e.pageX - 105;
+    const mouseX = e.pageX - 110;
     const mouseY = e.pageY - 30;
     circle.style = `transform: translate3d(${mouseX}px, ${mouseY}px, 0)`;
   });
