--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -52,7 +52,7 @@ const projects: Project[] = [
 >
   <div class="max-w-5xl mx-auto">
     <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">Mi trabajo</h2>
-    <h3 class="text-4xl md:text-5xl font-medium mb-8">Projectos</h3>
+    <h3 class="text-4xl md:text-5xl font-medium mb-8">Proyectos</h3>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
       {
