--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -61,13 +61,8 @@
           <span class="text-[var(--white)]">+51 966 271 844</span>
         </div> -->
         <span>Email:</span>
-        <a
-          target="_blank"
-          href="https://mail.google.com/mail/?view=cm&fs=1&to=miguel.gallardof@icloud.com&su=Hey%20Miguel!"
-          aria-label="Email"
-        >
-          <span class="text-[var(--white)]">miguel.gallardof@icloud.com</span
-          ></a
+        <a target="_blank" href="mailto:miguel@gales.pe" aria-label="Email">
+          <span class="text-[var(--white)]">miguel@gales.pe</span></a
         >
       </div>
     </div>
