--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -18,21 +18,21 @@ const projects: Project[] = [
   {
     title: "Torres Construction",
     image: torresc as ImageMetadata,
-    link: "https://github.com/miguelgallardof/torresc",
+    link: "https://github.com/miguelogf/torresc",
     preview: "https://torresc.netlify.app",
     status: "En actualización",
   },
   {
     title: "Grupo Siscog",
     image: siscog as ImageMetadata,
-    link: "https://github.com/miguelgallardof/siscog",
+    link: "https://github.com/miguelogf/siscog",
     preview: "https://siscog.pe",
     status: "Desplegado",
   },
   {
     title: "Gales",
     image: gales as ImageMetadata,
-    link: "https://github.com/miguelgallardof?tab=repositories",
+    link: "https://github.com/miguelogf?tab=repositories",
     preview: "https://gales.pe",
     status: "Desplegado",
   },
@@ -118,7 +118,7 @@ const projects: Project[] = [
     </div>
     <a
       target="_blank"
-      href="https://github.com/miguelgallardof?tab=repositories"
+      href="https://github.com/miguelogf?tab=repositories"
       aria-label="GitHub"
       class="w-full flex items-center justify-center gap-2 mt-9 text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-[var(--white-icon-tr)] p-3 rounded-full bg-[#1414149c] hover:bg-[var(--white-icon-tr)] hover:scale-105"
     >
