--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -20,28 +20,27 @@
         </div> -->
         <a
           target="_blank"
-          href="https://cvmiguelg.vercel.app/"
+          href="https://cv-miguelg.vercel.app/"
           aria-label="CV"
-          no-referrer
-          ><div class="flex gap-2 items-center mt-2 pt-2">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              ><g
-                fill="none"
-                stroke="var(--sec)"
-                stroke-linejoin="round"
-                stroke-width="2"
-                ><path
-                  stroke-linecap="round"
-                  d="M4 4v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8.342a2 2 0 0 0-.602-1.43l-4.44-4.342A2 2 0 0 0 13.56 2H6a2 2 0 0 0-2 2"
-                ></path><path d="M14 2v4a2 2 0 0 0 2 2h4"></path></g
-              ></svg
-            >
-            <p>Ver mi CV</p>
-          </div>
+          class="w-60 flex items-center justify-center gap-2 mt-9 text-[var(--white-icon)] hover:text-white transition duration-300 ease-in-out border border-[var(--white-icon-tr)] p-3 rounded-full bg-[#1414149c] hover:bg-[var(--white-icon-tr)] hover:scale-105"
+        >
+          <span class="md:text-lg text-md">Ver mi CV</span>
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="size-6"
+            viewBox="0 0 24 24"
+            ><g
+              fill="none"
+              stroke="currentColor"
+              stroke-linejoin="round"
+              stroke-width="2"
+              ><path
+                stroke-linecap="round"
+                d="M4 4v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8.342a2 2 0 0 0-.602-1.43l-4.44-4.342A2 2 0 0 0 13.56 2H6a2 2 0 0 0-2 2"
+              ></path><path d="M14 2v4a2 2 0 0 0 2 2h4"></path></g
+            ></svg
+          >
         </a>
       </div>
 
@@ -56,10 +55,6 @@
             <span class="text-[var(--white)]">Lima, Perú</span></a
           >
         </div>
-        <!-- <div class="flex items-center gap-2">
-          <span>Teléfono:</span>
-          <span class="text-[var(--white)]">+51 966 271 844</span>
-        </div> -->
         <span>Email:</span>
         <a target="_blank" href="mailto:miguel@gales.pe" aria-label="Email">
           <span class="text-[var(--white)]">miguel@gales.pe</span></a
@@ -67,9 +62,8 @@
       </div>
     </div>
   </div>
-</section>
 
-<!-- <div>
+  <!-- <div>
         <form
           id="contact-form"
           action="https://formspree.io/f/mnnjznkj"
@@ -144,3 +138,4 @@
     }
   });
 </script> -->
+</section>
